--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -4,35 +4,54 @@
         <meta charset="UTF-8">
         <title>{% block title %}{{ title }}{% endblock %}</title>
         <link rel="stylesheet" href="https://bootswatch.com/4/sketchy/bootstrap.min.css">
-        {% block stylesheets %}{% endblock %}
+        {% block stylesheets %}
+
+        <style>
+
+            .navbar-nav {
+                display: flex;
+                justify-content: flex-end;
+                width: 30rem;
+            }
+
+            #search {
+               
+            }
+
+            
+        </style>
+        
+        {% endblock %}
     </head>
     <body>
         <div class="container">
             <div class="row mt-5">
                 <div class="col">
                     <!-- Ma barre de navigation -->
-                    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                        <a class="navbar-brand" href="/">SwapGift</a>
-                        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor03" aria-controls="navbarColor03" aria-expanded="false" aria-label="Toggle navigation">
-                            <span class="navbar-toggler-icon"></span>
-                        </button>
+                    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+                        <div class="container">
+                            <a class="navbar-brand" href="#">SwapGift</a>
+                            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
+                                <span class="navbar-toggler-icon"></span>
+                            </button>
 
-                        <div class="collapse navbar-collapse" id="navbarColor03">
-                            <ul class="navbar-nav mr-auto">
-                                <li class="nav-item active">
-                                    <a class="nav-link" href="/"><span class="sr-only">(current)</span></a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="#">Catégories</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="#">Mon compte</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="#">A propos</a>
-                                </li>
-                            </ul>
-                            
+                            <div class="collapse navbar-collapse justify-content-end" id="navbarColor01">
+                                <form class="form-inline my-2 my-lg-0">
+                                    <input id="search" class="form-control mr-sm-2" type="text" placeholder="Search">
+                                    <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
+                                </form>
+                                <ul class="navbar-nav">
+                                    <li class="nav-item active mr-3">
+                                        <a class="nav-link btn btn-outline-secondary" href="#">S'inscrire <span class="sr-only">(current)</span></a>
+                                    </li>
+                                    <li class="nav-item mr-3">
+                                        <a class="nav-link btn btn-outline-secondary" href="#">Se connecter</a>
+                                    </li>
+                                    <li class="nav-item mr-3">
+                                        <a class="nav-link btn btn-info" href="#">Déposer une annonce</a>
+                                    </li>
+                                </ul>
+                            </div>
                         </div>
                     </nav>
                 </div>
@@ -56,8 +75,6 @@
             </div>
         </div>
         
-    
-        {% block body %}{% endblock %}
         {% block javascripts %}{% endblock %}
 
     </body>
