--- a/templates/swap/home.html.twig
+++ b/templates/swap/home.html.twig
@@ -22,6 +22,9 @@
   <li class="nav-item">
     <a class="nav-link" data-toggle="tab" href="#medias">Multimédias/loisirs</a>
   </li>
+  <li class="nav-item">
+    <a class="nav-link" data-toggle="tab" href="#autre">Autre</a>
+  </li>
 </ul>
 
 <!-- End Navigation CATEGORIES -->
