--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -5,22 +5,18 @@
         <title>{% block title %}{{ title }}{% endblock %}</title>
         <link rel="stylesheet" href="https://bootswatch.com/4/sketchy/bootstrap.min.css">
         {% block stylesheets %}
+            <style>
 
-        <style>
+                .navbar-nav {
+                    display: flex;
+                    justify-content: flex-end;
+                    width: 30rem;
+                }
 
-            .navbar-nav {
-                display: flex;
-                justify-content: flex-end;
-                width: 30rem;
-            }
-
-            #search {
-               
-            }
-
-            
-        </style>
-        
+                #search {
+                
+                }  
+            </style>
         {% endblock %}
     </head>
     <body>
@@ -59,22 +55,11 @@
         </div>
         <div class="container">
             <div class="row">
-                <div class="col">
-                    {% block body %} 
-                        <div class="jumbotron">
-                            <h1 class="display-3">Hello, world!</h1>
-                            <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
-                            <hr class="my-4">
-                            <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
-                            <p class="lead">
-                                <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
-                            </p>
-                        </div>
-                    {% endblock %}
+                <div class="col">               
+                {% block body %} {% endblock %}
                 </div>
             </div>
         </div>
-        
         {% block javascripts %}{% endblock %}
 
     </body>
