--- a/templates/swap/index.html.twig
+++ b/templates/swap/index.html.twig
@@ -9,12 +9,7 @@
 </style>
 
 <div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
+    <h1>Home</h1>
 
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ 'C:/Users/chou/Desktop/swap/src/Controller/SwapController.php'|file_link(0) }}">src/Controller/SwapController.php</a></code></li>
-        <li>Your template at <code><a href="{{ 'C:/Users/chou/Desktop/swap/templates/swap/index.html.twig'|file_link(0) }}">templates/swap/index.html.twig</a></code></li>
-    </ul>
 </div>
 {% endblock %}
