--- a/templates/security/register.html.twig
+++ b/templates/security/register.html.twig
@@ -3,37 +3,32 @@
 {% block title %}Inscription{% endblock %}
 
 {% block body %}
+<h1>Inscription</h1>
 
-<form method="post">
-    <fieldset>
-        <legend>Inscription</legend>
-        <div class="form-group">
-            <label for="email">Email</label>
-            <input type="email" name="email" class="form-control" placeholder="Enter email" required>
-            <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
-        </div>
-        <div class="form-group">
-            <label for="password">Password</label>
-            <input type="password" name="password" class="form-control" placeholder="Password" required>
-        </div>
-        <div class="form-group">
-            <label for="adresse">Adresse</label>
-            <input type="text" name="adresse" class="form-control" placeholder="Adresse" required>
-        </div>
-        <div class="form-group">
-            <label for="telephone">Telephone</label>
-            <input type="" name="telephone" class="form-control" placeholder="Telephone" required>
-        </div>
-        <div class="form-group">
-            <label for="ville">Ville</label>
-            <input type="" name="ville" class="form-control" placeholder="Ville" required>
-        </div>
-        <div class="form-group">
-            <label for="code_postale">Code Postale</label>
-            <input type="" name="code_postale" class="form-control" placeholder="Code Postale" required>
-        </div>
-        
-        <button type="submit" class="btn btn-primary">Submit</button>
-    </fieldset>
-</form>
+{{ form_start(monFormulaire) }}
+
+{{ form_row(monFormulaire.email) }}
+
+{{ form_row(monFormulaire.password) }}
+
+{{ form_row(monFormulaire.adresse) }}
+
+{{ form_row(monFormulaire.telephone) }}
+
+{{ form_row(monFormulaire.ville) }}
+
+{{ form_row(monFormulaire.code_postale) }}
+
+{% if edition %}
+
+{{ form_row(monFormulaire.modifier, { 'label': 'Modifier' }) }}
+
+{% else %}
+
+{{ form_row(monFormulaire.inscription, { 'label': 'Inscription' }) }}
+
+{% endif %}
+
+{{ form_end(monFormulaire) }}
+
 {% endblock %}
