--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -51,7 +51,6 @@
             </div>
         </nav>
 
-        {% block body %}{% endblock %}
         <div class="container">
             <div class="row mt-5">
                 <div class="col">
@@ -76,7 +75,7 @@
                                         <a class="nav-link btn btn-outline-secondary" href="#">Se connecter</a>
                                     </li>
                                     <li class="nav-item mr-3">
-                                        <a class="nav-link btn btn-info" href="#">Déposer une annonce</a>
+                                        <a class="nav-link btn btn-info" href="{{ path('form') }}">Déposer une annonce</a>
                                     </li>
                                 </ul>
                             </div>
