--- a/templates/swap/index.html.twig
+++ b/templates/swap/index.html.twig
@@ -1,20 +1,27 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello SwapController!{% endblock %}
+{% block title %}Liste des produits{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
 
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
-
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ 'C:/Users/chou/Desktop/swap/src/Controller/SwapController.php'|file_link(0) }}">src/Controller/SwapController.php</a></code></li>
-        <li>Your template at <code><a href="{{ 'C:/Users/chou/Desktop/swap/templates/swap/index.html.twig'|file_link(0) }}">templates/swap/index.html.twig</a></code></li>
-    </ul>
+<div class="container" style="margin-top: 20px;">
+    <div class="row" style="display: flex;align-items: center;justify-content: center;">
+        {% for produit in produits %}
+            <div class="card col-lg-3" style="margin: 20px;">
+                <div class="card-header">
+                    {{ produit.titre }}
+                </div>
+                <img class="card-img-top" src="{{ produit.image }}" style="width: 250px;height: 250px;margin-top: 10px;">
+                <div class="card-body">
+                    <p class="card-text">description</p>
+                </div>
+                <div class="card-footer row">
+                    <p class="col-lg-8">{{ produit.valeur ~ "€" }}</p>
+                    <a href="#" class="btn btn-success col-lg-4">Acheter</a>
+                </div>
+            </div>
+        {% endfor %}
+    </div>
 </div>
+
 {% endblock %}
