--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -54,7 +54,7 @@
                                 <input class="form-control mr-sm-2" type="text" placeholder="Search">
                                 <button class="btn btn-secondary my-2 my-sm-0 mr-2" type="submit">Search</button>
                             </form>
-                            <a href="{{ path('form') }}" class="nav-link btn btn-info">Déposer une annonce</a>
+                            <a href="{{ path('produit_new') }}" class="nav-link btn btn-info">Déposer une annonce</a>
                         </div>
                     </nav>
                 </div>
