--- a/templates/swap/home.html.twig
+++ b/templates/swap/home.html.twig
@@ -21,12 +21,13 @@
       position:absolute;
       color:white;
       font-size:1.5em;
-      width:25%;
+      text-shadow: 0.1em 0.1em 0.2em black;
     }
 
     .carousel-item .texte1 {
       top: 2rem;
       left: 3rem;
+      width:45%;
     }
 
     .carousel-item .texte2 {
@@ -39,6 +40,7 @@
       top: 2rem;
       right: 3rem;
       text-align: right;
+      width:25%;
     }
   </style>
 
