--- a/templates/admin/admin.html.twig
+++ b/templates/admin/admin.html.twig
@@ -4,6 +4,12 @@
 
 {% block body %}
 
-<h1 class="alert alert-dismissible alert-success">Bonjour admin !</h1>
+    <div class="container">
+        <div class="row mt-2 justify-content-center">
+            <div class="col-6">
+                <div class="alert alert-dismissible alert-success">Bonjour admin !</div>
+            </div>
+        </div>
+    </div>
 
 {% endblock %}
