--- a/templates/swap/home.html.twig
+++ b/templates/swap/home.html.twig
@@ -42,6 +42,21 @@
       text-align: right;
       width:25%;
     }
+    
+    a {
+      text-decoration: none;
+    }
+
+    .imgProduit {
+      width: 90%; 
+      display: block;
+      border-radius: 20px;
+      margin: 0 auto;
+    }
+
+    span {
+      color: #30336b;
+    }
   </style>
 
 {% endblock %}
@@ -79,15 +94,15 @@
   <div class="carousel-inner radius">
     <div class="carousel-item active">
         <div class="texte texte1">" - This object has already been loved once. "</div>
-        <img src="https://cdn.pixabay.com/photo/2016/05/28/00/06/gift-1420830_1280.jpg" class="d-block w-100" alt="...">
+        <img src="https://cdn.pixabay.com/photo/2016/05/28/00/06/gift-1420830_1280.jpg" class="d-block w-100" alt="MainGift1">
     </div>
     <div class="carousel-item">
       <div class="texte texte2">" This object has already been loved once. "</div>
-      <img src="https://cdn.pixabay.com/photo/2019/12/03/07/34/gift-4669449_1280.jpg" class="d-block w-100" alt="...">
+      <img src="https://cdn.pixabay.com/photo/2019/12/03/07/34/gift-4669449_1280.jpg" class="d-block w-100" alt="MainGift2">
     </div>
     <div class="carousel-item">
       <div class="texte texte3">" This object has already been loved once. "</div>
-      <img src="https://cdn.pixabay.com/photo/2017/12/05/05/34/gifts-2998593_1280.jpg" class="d-block w-100" alt="...">
+      <img src="https://cdn.pixabay.com/photo/2017/12/05/05/34/gifts-2998593_1280.jpg" class="d-block w-100" alt="MainGift3">
     </div>
   </div>
 </div>
@@ -98,23 +113,25 @@
       {% for produit in produits %}
 
           <div class="col-4 card mt-3">
-          
-              <h5 class="card-header">{{ produit.titre }}</h5>
-              <div class="card-body">
-                <h6 class="card-subtitle text-muted">Catégorie : {{ produit.categorie }}</h6>
+              <h4 class="card-header">{{ produit.titre }}</h4>
+              <div class="card-footer text-muted">
+              Ajouté le {{ produit.CreeLe ? produit.CreeLe|date('d-m-Y')}}
               </div>
-              <img style="height: 150px; width: 100%; display: block;" src="{{ produit.image }}" alt="Card image">
+              <img class="imgProduit mt-4" src="uploads/{{ produit.image }}" alt="Card image">
               <div class="card-body">
                 <p class="card-text">{{ produit.description }}</p>
+                <p class="card-subtitle text-muted">
+                  <span class="badge badge-pill badge-info">Catégorie : {{ produit.categorie }}</span>
+                </p>
               </div>
-
               <div class="card-body">
-                Valeur estimée : {{ produit.valeur }} €
+                <h6>Valeur estimée : {{ produit.valeur }} €</h6>
               </div>
-              <div class="card-footer text-muted">
-              Ajouté le {{ produit.CreeLe ? produit.CreeLe|date('Y-m-d') : '' }}
+              <div class="row justify-content-center">
+                <div class="col-12-lg-6">
+                   <button type="button" class="btn btn-primary mb-2"><a href="{{ path('fiche_produit', {'id': produit.id}) }}" class="text-white">Voir le produit</a></button>
+                </div>
               </div>
-
           </div>
 
       {% endfor %}
