--- a/templates/swap/fiche_produit.html.twig
+++ b/templates/swap/fiche_produit.html.twig
@@ -37,7 +37,7 @@
                 <div class="card-body">
                     <span class="badge badge-pill badge-info">Catégorie : {{ produit.categorie }}</span>
                 </div>
-                <img class="img radius" src="uploads/{{ produit.image }}" alt="Card image">
+                <img class="img radius" src="/uploads/{{ produit.image }}" alt="Card image">
                 <div class="card-body">
                     <h6>Valeur estimée : {{ produit.valeur }} €</h6>
                     <p class="card-text">{{ produit.description }}</p>
