--- a/templates/categorie/index.html.twig
+++ b/templates/categorie/index.html.twig
@@ -2,6 +2,14 @@
 
 {% block title %}Categorie index{% endblock %}
 
+{% block stylesheets %}
+    <style>
+        .actions {
+            color: black;
+        }
+    </style>
+{% endblock %}
+
 {% block body %}
     <h1>Categorie index</h1>
 
@@ -19,8 +27,8 @@
                 <td>{{ categorie.id }}</td>
                 <td>{{ categorie.libelle }}</td>
                 <td>
-                    <a href="{{ path('categorie_show', {'id': categorie.id}) }}">show</a>
-                    <a href="{{ path('categorie_edit', {'id': categorie.id}) }}">edit</a>
+                    <a class="actions" href="{{ path('categorie_show', {'id': categorie.id}) }}">show</a>
+                    <a class="actions" href="{{ path('categorie_edit', {'id': categorie.id}) }}">edit</a>
                 </td>
             </tr>
         {% else %}
@@ -31,5 +39,5 @@
         </tbody>
     </table>
 
-    <a href="{{ path('categorie_new') }}">Create new</a>
+    <a class="actions" href="{{ path('categorie_new') }}">Create new</a>
 {% endblock %}
