--- a/templates/produit/index.html.twig
+++ b/templates/produit/index.html.twig
@@ -2,6 +2,14 @@
 
 {% block title %}Produit index{% endblock %}
 
+{% block stylesheets %}
+    <style>
+        .actions {
+            color: black;
+        }
+    </style>
+{% endblock %}
+
 {% block body %}
     <h1>Produit index</h1>
 
@@ -27,8 +35,8 @@
                 <td>{{ produit.image }}</td>
                 <td>{{ produit.CreeLe ? produit.CreeLe|date('Y-m-d H:i:s') : '' }}</td>
                 <td>
-                    <a href="{{ path('produit_show', {'id': produit.id}) }}">show</a>
-                    <a href="{{ path('produit_edit', {'id': produit.id}) }}">edit</a>
+                    <a class="actions" href="{{ path('produit_show', {'id': produit.id}) }}">show</a>
+                    <a class="actions" href="{{ path('produit_edit', {'id': produit.id}) }}">edit</a>
                 </td>
             </tr>
         {% else %}
@@ -39,5 +47,5 @@
         </tbody>
     </table>
 
-    <a href="{{ path('produit_new') }}">Create new</a>
+    <a class="actions" href="{{ path('produit_new') }}">Create new</a>
 {% endblock %}
