--- a/templates/swap/fiche_produit.html.twig
+++ b/templates/swap/fiche_produit.html.twig
@@ -22,6 +22,10 @@
         margin: 0 auto;
     }
 
+    .card-body {
+      margin: 0 auto;
+    }
+
   </style>
 
 {% endblock %}
@@ -43,7 +47,7 @@
                     <p class="card-text">{{ produit.description }}</p>
                 </div>
                 <div class="card-body row">
-                <div class="col-6">
+                <div class="col-12">
                     <button type="button" class="btn btn-success">Contacter le vendeur</button>
                 </div>
                 </div>
