--- a/templates/swap/home.html.twig
+++ b/templates/swap/home.html.twig
@@ -130,7 +130,7 @@
           <div class="col-12 col-lg-3 card m-1" style="border-radius: 15px; ">
             <h5 class="card-header">{{ produit.titre }}</h5>
             <div class="card-footer text-muted">Ajouté le {{ produit.CreeLe ? produit.CreeLe|date('d-m-Y')}}</div>
-            <img class="imgProduit mt-4" src="uploads/{{ produit.image }}" alt="Card image">
+            <img class="imgProduit mt-4" src="/uploads/{{ produit.image }}" alt="Card image">
             <div class="card-body">
               <p class="card-text">{{ produit.description }}</p>
               <p class="card-subtitle text-muted">
